k8s/dhis2/web/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: dhis2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
      annotations:
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
    spec:
      containers:
        - name: web
          image: dhis2/core-dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 9010
          volumeMounts:
            - name: config-volume
              mountPath: /opt/dhis2/dhis.conf
              subPath: dhis.conf
              readOnly: true
            - name: log4j2-volume
              mountPath: /opt/dhis2/log4j2.xml
              subPath: log4j2.xml
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: web-config
        - name: log4j2-volume
          configMap:
            name: web-log4j2
