k8s/dhis2/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: dhis2
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: debug
      port: 8081
      targetPort: 8081
    - name: jmx
      port: 9010
      targetPort: 9010
